<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips1"
                android:textSize="@dimen/text_size_tile_1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/service_state_off"
                    android:id="@+id/service_state"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="@dimen/text_size"
                    android:text="@string/settings"
                    android:id="@+id/settings"/>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips2"
                android:textSize="@dimen/text_size_tile_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size_tile_2"
                    android:text="@string/parent_entrance"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/text_size"
                        android:text="@string/x"/>
                    <EditText
                        android:id="@+id/parent_entrance_x"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:inputType="number"
                        android:textSize="@dimen/text_size" />
                    <TextView
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/text_size"
                        android:text="@string/y"/>
                    <EditText
                        android:id="@+id/parent_entrance_y"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:inputType="number"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size_tile_2"
                    android:text="@string/sign_in"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/text_size"
                        android:text="@string/x"/>
                    <EditText
                        android:id="@+id/sign_in_x"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:inputType="number"
                        android:textSize="@dimen/text_size" />
                    <TextView
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/text_size"
                        android:text="@string/y"/>
                    <EditText
                        android:id="@+id/sign_in_y"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:inputType="number"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size_tile_2"
                    android:text="@string/health"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/text_size"
                        android:text="@string/x"/>
                    <EditText
                        android:id="@+id/health_x"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:inputType="number"
                        android:textSize="@dimen/text_size" />
                    <TextView
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/text_size"
                        android:text="@string/y"/>
                    <EditText
                        android:id="@+id/health_y"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:inputType="number"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size_tile_2"
                    android:text="@string/sign_in_confirm"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/text_size"
                        android:text="@string/x"/>
                    <EditText
                        android:id="@+id/sign_in_confirm_x"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:inputType="number"
                        android:textSize="@dimen/text_size" />
                    <TextView
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/text_size"
                        android:text="@string/y"/>
                    <EditText
                        android:id="@+id/sign_in_confirm_y"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:inputType="number"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_size_tile_2"
                android:text="@string/tips3"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textSize="@dimen/text_size_tile_1" />
    </LinearLayout>

</ScrollView>